--- a/HomeWork1/main.html
+++ b/HomeWork1/main.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-  <title>Boostrap</title>
+  <title>Homework 1</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
   <link href='style.css' rel='stylesheet' />
@@ -12,7 +12,7 @@
 
 <body>
     <div class="row text-center col-md-12 header">
-        <h1>Header</h1>
+        <h1>Welcome to my Web Site !</h1>
     </div>
     <div class="row text-center">
         <div class="col-lg-3 col-sm-12 col-md-4 sidebar"> 
@@ -30,7 +30,7 @@
             
         </div>
         
-        <div class="col-lg-6 .order-sm-1 col-sm-12 center">
+        <div class="col-lg-6 .order-sm-1 col-sm-12 center" id="main">
             <div class="row">
                 <div class="col-lg-12 col-sm-12 col-md-12 navigation">
                     <nav>
@@ -149,6 +149,9 @@
                 <img src="picture\discord.png" alt="discord" class="discord">
             </a><br>    
             <h3>Click on the social media !</h3>
+            <nav>
+                <a href="#main">Go back to the main !</a>
+            </nav>
         </div>
     </div>
 </body>
