--- a/HomeWork1/main.html
+++ b/HomeWork1/main.html
@@ -15,17 +15,18 @@
         <h1>Welcome to my Web Site !</h1>
     </div>
     <div class="row text-center">
-        <div class="col-lg-3 col-sm-12 col-md-4 sidebar"> 
-            <br>
-            <img src="picture\pp.png" alt="profile" class="pp">
-            <br>
-            <p class="pres">Full Name</p>
-            <p class="info">Alexandre MOURGUES<br> ---------------</p>
-            <p class="pres">Job Title</p>
-            <p class="info">Half Stack developer <br> ---------------</p>
-            <p class="pres">Phone Number</p>
-            <p class="info">06.XX.XX.XX.XX<br> ---------------</p>
-            
+        <div class="col-lg-3 col-sm-12 col-md-4 sidebar">
+            <div class="tkt col-lg-3 col-sm-12 col-md-4">
+                <br>
+                <img src="picture\pp.png" alt="profile" class="pp">
+                <br>
+                <p class="pres">Full Name</p>
+                <p class="info">Alexandre MOURGUES<br> ---------------</p>
+                <p class="pres">Job Title</p>
+                <p class="info">Half Stack developer <br> ---------------</p>
+                <p class="pres">Phone Number</p>
+                <p class="info">06.XX.XX.XX.XX<br> ---------------</p>
+            </div>
 
             
         </div>
