--- a/HomeWork2/Exo3/Exo.html
+++ b/HomeWork2/Exo3/Exo.html
@@ -8,4 +8,22 @@
 </head>
 <body>
 
+  <div class="header">
+    <div>
+      <p>EFREI DEMO - Unplash API Tester</p>
+    </div>
+    <div class="text">
+      Type your research and press enter <br> or clic on the button search
+    </div>
+    <div>
+      <input id="data" type="text">
+      <button onclick="search()">Search</button>
+    </div>
+   </div>
+
+  <div class="container">
+
+  </div>
+
+
  </body>
